✨ feat(api): 重构集群节点标签服务，引入DTO分层架构
重构集群节点标签模块，实现以下改进：

1. 引入DTO和VO进行数据分层传输
2. 增加转换器ClusterNodeLabelConverter处理实体与DTO/VO转换
3. 服务层接口改为返回DTO类型
4. 控制层新增CRUD接口并支持VO返回
5. 使用MyBatis-Flex简化Mapper实现
6. 完善文档注释和异常处理

此重构提升了代码可维护性，明确了各层职责，为前端提供了更规范的数据结构。

Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>